--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,7 +44,7 @@ body{
     background-color:$calculator-color;
     top:50%;
     left:50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%) !important;
     border-radius: 10px;
     
     backdrop-filter: blur(15px);
@@ -74,6 +74,10 @@ body{
             &:nth-child(4n+2){
                 border-left:1px solid $text-color;
             }
+            &:hover{
+                background-color:#B8B4B5;
+                transition: all 0.5s;
+            }
         };
         
         input{
@@ -87,6 +91,7 @@ body{
             background:transparent;
         }
     }
+    
     @include mobile{
         height: 450px;
         width: 300px;
