--- a/scss/main.scss
+++ b/scss/main.scss
@@ -34,6 +34,7 @@ body {
     top: calc(100% - 200px);
     left: calc(100% - 200px);
     clip-path: circle(50% at 64% 66%);
+    z-index: -1;
   }
 }
 .container {
